// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mac > mac auto-update > arm64 1`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > arm64 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac > mac auto-update > arm64 3`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > arm64 4`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac > mac auto-update > universal 1`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > universal 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac > mac auto-update > universal 3`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > universal 4`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac > mac auto-update > x64 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > x64 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac > mac auto-update > x64 3`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "TestApp.zip",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap",
      "safeArtifactName": "TestApp.zip.blockmap",
      "updateInfo": {
        "blockMapV3": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp.zip.blockmap3",
      "safeArtifactName": "TestApp.zip.blockmap3",
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "blockMapV3": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.zip",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`mac > mac auto-update > x64 4`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "com.test.app",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;
